legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr65050.c-5.4.0-1.out.txt
pr65050.c:5:21: error: array type has incomplete element type ‘A {aka int[]}’
 struct S { int i; A a[5]; } s;  
                     ^
pr65050.c:6:22: error: array type has incomplete element type ‘int[]’
 extern void foo (int p[2][]);  
                      ^
pr65050.c:7:20: error: array type has incomplete element type ‘A {aka int[]}’
 extern void bar (A p[2]);  
                    ^
pr65050.c:10:10: error: array type has incomplete element type ‘int[]’
 foo (int p[2][])  
          ^
pr65050.c:15:8: error: array type has incomplete element type ‘A {aka int[]}’
 bar (A p[2])  
        ^
pr65050.c:20:10: error: array type has incomplete element type ‘struct T’
 struct T t[5];  
          ^
pr65050.c:21:10: error: array type has incomplete element type ‘struct U’
 struct U u[] = { { "abc" } };  
          ^
pr65050.c:23:4: error: array type has incomplete element type ‘TT {aka struct T}’
 TT tt[5];  
    ^
